  - Set the minimum restock amount of reagents, arrows and bolts to 50.
  - Fixed the name of sheep.
  - Fixed bug #0000386 (missing tongs sellprice tag)
  - Fixed light radius for certain lightsources.
  - Removed carve tags (and related files) which are no longer used.
  - Support for client 4.0.8.
  - Added Samurai Empire craftables to the tailoring menu.
 * Python Script Changes:
  - Added a follow command.
  - Tinkers can now choose a second material.
  - Swingspeed is now limited to 1 swing per second.
  - Implemented several item property caps.
  - Archers now only need to stand still for 500 ms before they can fire.
  - Parried special abilities don't consume mana anymore.
  - Using a special ability 3 seconds after the last special ability consumes twice
    the mana.
  - Fixed an issue with the spell Telekinesis
  - Fix for Detecting Hidden
  - Fixed bug #0000380 (potionkeg was not usable with nightsight potion)
  - Fixed an issue with nuke <baseid> not working if the baseid had two characters.
  - Improved goname command (you can not only go the first char; e.g. use the command twice to go to
    the second char with the same name etc.)
  - Added a goitem <name> command (same function as goname, but for items)
  - Fixed a bug in the nukez command.
  - Fixed an issue with skillgain in the low levels.
  - Its no longer possible to equip movable>=2 items with doubleclicks.
  - Added the tilepattern command.
  - Fixed an issue with the magic property generator (splash damage and hit spell effects were happening far too often)
  - Tracking skill now does something. It's not yet OSI compatible. Thanks to Surcouf.
  - Implemented smove command to move yourself relatively to your current position without interrupting the current target.
  - Fixed an encoding issue in bulletin boards.
  - Fixed an issue with pets and gate travel gates.
  - Fixed an issue with special moves on already killed characters. (Spamming the log)