@@ -11,21 +11,25 @@
 <definitions>
 	<item id="b41">
 		<id>0xb41</id>
+		<watersource>1</watersource>
 		<category>Professions\Stablemaster\Water Trough (N/S) (1/2)</category>
 	</item>
 
 	<item id="b42">
 		<id>0xb42</id>
+		<watersource>1</watersource>
 		<category>Professions\Stablemaster\Water Trough (N/S) (2/2)</category>
 	</item>
 
 	<item id="b43">
 		<id>0xb43</id>
+		<watersource>1</watersource>
 		<category>Professions\Stablemaster\Water Trough (W/E) (1/2)</category>
 	</item>
 
 	<item id="b44">
 		<id>0xb44</id>
+		<watersource>1</watersource>
 		<category>Professions\Stablemaster\Water Trough (W/E) (2/2)</category>
 	</item>
 
